--- a/shop.html
+++ b/shop.html
@@ -1,175 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shop · 3Leathers</title>
-  <link rel="stylesheet" href="style.css?v=6" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>3Leathers — Shop</title>
+  <meta name="description" content="Wallets, Purses, and Holsters — handmade by 3Leathers." />
+  <style>
+    :root{
+      --bg:#0b0b0b; --ink:#f8f5e3; --accent:#d6b14a; --muted:rgba(255,255,255,.08);
+    }
+    html,body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
+    a{color:var(--accent)}
+    header{position:sticky;top:0;z-index:10;background:rgba(0,0,0,.6);backdrop-filter:saturate(140%) blur(6px);border-bottom:1px solid var(--muted)}
+    .wrap{max-width:1100px;margin:auto;padding:16px}
+    .row{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .brand{display:flex;align-items:center;gap:10px}
+    .brand img{height:40px;border-radius:4px}
+    nav a{margin-left:10px}
+    .hero{padding:36px 16px;border-bottom:1px solid var(--muted);background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.7)), url("images/Backdrop2-min.jpeg") center/cover}
+    .hero h1{margin:0 0 6px 0}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin:18px 0}
+    @media (max-width:900px){.grid{grid-template-columns:1fr 1fr}}
+    @media (max-width:640px){.grid{grid-template-columns:1fr}}
+    .card{background:rgba(0,0,0,.55);border:1px solid var(--muted);border-radius:14px;overflow:hidden;display:flex;flex-direction:column}
+    .card img{width:100%;height:220px;object-fit:cover;background:#111}
+    .pad{padding:14px}
+    .muted{opacity:.85}
+    label{font-size:13px;font-weight:600}
+    input[type=number], select, input[type=text]{width:100%;margin-top:6px;padding:10px 12px;border-radius:10px;border:1px solid var(--muted);background:#0f0f0f;color:var(--ink)}
+    .actions{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+    .pill{padding:10px 14px;border-radius:999px;background:var(--accent);color:#000;font-weight:700;text-decoration:none;border:none;cursor:pointer}
+    .pill.secondary{background:#2a2a2a;color:var(--ink);border:1px solid var(--muted)}
+    .note{font-size:12px;opacity:.75}
+    footer{padding:24px 16px;border-top:1px solid var(--muted);text-align:center;color:#cfc8a8}
+  </style>
 </head>
 <body>
-
-  <!-- Hamburger -->
-  <div class="menu-icon" id="menuButton"
-       aria-label="Open menu" role="button" tabindex="0"
-       aria-controls="sideMenu" aria-expanded="false"
-       style="position:fixed; top:14px; left:14px; z-index:2000;">
-    <div></div><div></div><div></div>
-  </div>
-
-  <!-- Header / Logo -->
   <header>
-    <a href="index.html#top" aria-label="Back to Home">
-      <img id="logo" src="/images/Logo-min.jpg?v=6" alt="3Leathers Logo" />
-    </a>
+    <div class="wrap row">
+      <div class="brand">
+        <img src="images/Logo-min.jpg" alt="3Leathers logo">
+        <strong>3Leathers</strong>
+      </div>
+      <nav>
+        <a href="index.html">Home</a> •
+        <a href="shop.html"><strong>Shop</strong></a> •
+        <a href="custom.html">Custom</a> •
+        <a href="checkout.html">Checkout</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- Slide-out menu -->
-  <nav id="sideMenu" aria-label="Site navigation">
-    <a href="index.html#top" class="navlink">Home</a>
-    <a href="index.html#support" class="navlink">Support the Craft</a>
-    <a href="shop.html"   class="navlink">Shop</a>
-    <a href="custom.html" class="navlink">Custom Requests</a>
-    <a href="cart.html"   class="navlink">Cart</a>
-    <a href="faq.html"    class="navlink">FAQ</a>
-  </nav>
+  <section class="hero">
+    <div class="wrap">
+      <h1>Shop — Wallets, Purses, Holsters</h1>
+      <p class="muted">No machines. Made by hand. Choose a base style and leave notes — I’ll confirm details before crafting.</p>
+      <div class="actions" style="margin-top:10px">
+        <a class="pill" href="checkout.html">Go to Checkout</a>
+        <button class="pill secondary" id="clearOrder">Clear Order</button>
+      </div>
+      <p class="note" id="orderStatus"></p>
+    </div>
+  </section>
 
-  <main>
-    <div class="content">
-      <h1>Shop</h1>
-      <p class="lead">Handmade leather goods. Built to last.</p>
-
-      <!-- Wallets (4 styles, ≤2 images each) -->
-      <section>
-        <h2>Wallets</h2>
-
-        <div class="gallery" aria-label="Wallet styles">
-          <!-- Style 1 -->
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/wallets/style1-a.jpg" alt="Wallet Style 1 — photo A">
-              <img src="/images/products/wallets/style1-b.jpg" alt="Wallet Style 1 — photo B">
+  <main class="wrap">
+    <!-- Wallets -->
+    <h2>Wallets</h2>
+    <div class="grid">
+      <article class="card" data-item="Wallet — Bifold">
+        <img src="images/Logo-min.jpg" alt="Wallet thumbnail">
+        <div class="pad">
+          <h3>Wallet — Bifold</h3>
+          <p class="muted">Classic bifold with hand-stitched edges. Choose leather color; internal layout adjustable on request.</p>
+          <label>Leather Color</label>
+          <input type="text" placeholder="e.g., dark brown, whiskey, black" data-field="color">
+          <label style="margin-top:10px">Notes</label>
+          <input type="text" placeholder="card slots, cash pocket, etc." data-field="notes">
+          <div class="row" style="margin-top:10px">
+            <div style="flex:1">
+              <label>Quantity</label>
+              <input type="number" min="1" value="1" data-field="qty">
             </div>
-            <figcaption>Style 1</figcaption>
-          </figure>
-
-          <!-- Style 2 -->
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/wallets/style2-a.jpg" alt="Wallet Style 2 — photo A">
-              <img src="/images/products/wallets/style2-b.jpg" alt="Wallet Style 2 — photo B">
+            <div class="actions">
+              <button class="pill addBtn" type="button">Add to Order</button>
             </div>
-            <figcaption>Style 2</figcaption>
-          </figure>
-
-          <!-- Style 3 -->
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/wallets/style3-a.jpg" alt="Wallet Style 3 — photo A">
-              <img src="/images/products/wallets/style3-b.jpg" alt="Wallet Style 3 — photo B">
-            </div>
-            <figcaption>Style 3</figcaption>
-          </figure>
-
-          <!-- Style 4 -->
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/wallets/style4-a.jpg" alt="Wallet Style 4 — photo A">
-              <img src="/images/products/wallets/style4-b.jpg" alt="Wallet Style 4 — photo B">
-            </div>
-            <figcaption>Style 4</figcaption>
-          </figure>
+          </div>
         </div>
-      </section>
+      </article>
 
-      <!-- Purses (2 styles) -->
-      <section>
-        <h2>Purses</h2>
-        <div class="gallery" aria-label="Purse styles">
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/purses/style1-a.jpg" alt="Purse Style 1 — photo A">
-              <img src="/images/products/purses/style1-b.jpg" alt="Purse Style 1 — photo B">
+      <article class="card" data-item="Wallet — Minimal">
+        <img src="images/Logo-min.jpg" alt="Wallet thumbnail">
+        <div class="pad">
+          <h3>Wallet — Minimal</h3>
+          <p class="muted">Slim front-pocket carry. Holds essentials with a low profile.</p>
+          <label>Leather Color</label>
+          <input type="text" placeholder="e.g., saddle tan, charcoal" data-field="color">
+          <label style="margin-top:10px">Notes</label>
+          <input type="text" placeholder="ID window, cash slot, etc." data-field="notes">
+          <div class="row" style="margin-top:10px">
+            <div style="flex:1">
+              <label>Quantity</label>
+              <input type="number" min="1" value="1" data-field="qty">
             </div>
-            <figcaption>Style 1</figcaption>
-          </figure>
-
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/purses/style2-a.jpg" alt="Purse Style 2 — photo A">
-              <img src="/images/products/purses/style2-b.jpg" alt="Purse Style 2 — photo B">
+            <div class="actions">
+              <button class="pill addBtn" type="button">Add to Order</button>
             </div>
-            <figcaption>Style 2</figcaption>
-          </figure>
+          </div>
         </div>
-      </section>
+      </article>
 
-      <!-- Gun Holsters (3 styles) -->
-      <section>
-        <h2>Gun Holsters</h2>
-        <div class="gallery" aria-label="Holster styles">
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/holsters/style1-a.jpg" alt="Holster Style 1 — photo A">
-              <img src="/images/products/holsters/style1-b.jpg" alt="Holster Style 1 — photo B">
+      <article class="card" data-item="Wallet — Long">
+        <img src="images/Logo-min.jpg" alt="Wallet thumbnail">
+        <div class="pad">
+          <h3>Wallet — Long</h3>
+          <p class="muted">Tall silhouette for bills laid flat; great for organizers.</p>
+          <label>Leather Color</label>
+          <input type="text" placeholder="e.g., oxblood, natural veg-tan" data-field="color">
+          <label style="margin-top:10px">Notes</label>
+          <input type="text" placeholder="checkbook slot, zipper, etc." data-field="notes">
+          <div class="row" style="margin-top:10px">
+            <div style="flex:1">
+              <label>Quantity</label>
+              <input type="number" min="1" value="1" data-field="qty">
             </div>
-            <figcaption>Style 1</figcaption>
-          </figure>
-
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/holsters/style2-a.jpg" alt="Holster Style 2 — photo A">
-              <img src="/images/products/holsters/style2-b.jpg" alt="Holster Style 2 — photo B">
+            <div class="actions">
+              <button class="pill addBtn" type="button">Add to Order</button>
             </div>
-            <figcaption>Style 2</figcaption>
-          </figure>
-
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/holsters/style3-a.jpg" alt="Holster Style 3 — photo A">
-              <img src="/images/products/holsters/style3-b.jpg" alt="Holster Style 3 — photo B">
-            </div>
-            <figcaption>Style 3</figcaption>
-          </figure>
+          </div>
         </div>
-      </section>
+      </article>
+    </div>
 
-      <!-- Phone Case (1 style) -->
-      <section>
-        <h2>Phone Case</h2>
-        <div class="gallery" aria-label="Phone case style">
-          <figure class="card">
-            <div class="pair">
-              <img src="/images/products/phone/style1-a.jpg" alt="Phone Case Style 1 — photo A">
-              <img src="/images/products/phone/style1-b.jpg" alt="Phone Case Style 1 — photo B">
+    <!-- Purses -->
+    <h2>Purses</h2>
+    <div class="grid">
+      <article class="card" data-item="Purse — Crossbody">
+        <img src="images/Purse04-min.jpg" alt="Purse">
+        <div class="pad">
+          <h3>Purse — Crossbody</h3>
+          <p class="muted">Compact crossbody with secure flap. Hand-stitched and burnished.</p>
+          <label>Leather Color</label>
+          <input type="text" placeholder="e.g., black, dark brown" data-field="color">
+          <label style="margin-top:10px">Notes</label>
+          <input type="text" placeholder="strap length, pocket layout" data-field="notes">
+          <div class="row" style="margin-top:10px">
+            <div style="flex:1">
+              <label>Quantity</label>
+              <input type="number" min="1" value="1" data-field="qty">
             </div>
-            <figcaption>Style 1</figcaption>
-          </figure>
+            <div class="actions">
+              <button class="pill addBtn" type="button">Add to Order</button>
+            </div>
+          </div>
         </div>
-      </section>
+      </article>
+
+      <article class="card" data-item="Purse — Tote">
+        <img src="images/Purse05-min.jpg" alt="Purse">
+        <div class="pad">
+          <h3>Purse — Tote</h3>
+          <p class="muted">Everyday carry with sturdy handles and spacious interior.</p>
+          <label>Leather Color</label>
+          <input type="text" placeholder="e.g., natural, saddle tan" data-field="color">
+          <label style="margin-top:10px">Notes</label>
+          <input type="text" placeholder="pockets, closure type" data-field="notes">
+          <div class="row" style="margin-top:10px">
+            <div style="flex:1">
+              <label>Quantity</label>
+              <input type="number" min="1" value="1" data-field="qty">
+            </div>
+            <div class="actions">
+              <button class="pill addBtn" type="button">Add to Order</button>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+
+    <!-- Holsters -->
+    <h2>Holsters</h2>
+    <div class="grid">
+      <article class="card" data-item="Holster — Belt Fit">
+        <img src="images/Holster-BF-min.jpeg" alt="Holster">
+        <div class="pad">
+          <h3>Holster — Belt Fit</h3>
+          <p class="muted">Custom-fit belt holster. Specify pistol model and carry angle.</p>
+          <label>Leather Color</label>
+          <input type="text" placeholder="e.g., dark brown, black" data-field="color">
+          <label style="margin-top:10px">Notes</label>
+          <input type="text" placeholder="pistol model, cant angle, belt width" data-field="notes">
+          <div class="row" style="margin-top:10px">
+            <div style="flex:1">
+              <label>Quantity</label>
+              <input type="number" min="1" value="1" data-field="qty">
+            </div>
+            <div class="actions">
+              <button class="pill addBtn" type="button">Add to Order</button>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="card" data-item="Holster — Quick Draw">
+        <img src="images/Quick-Draw-min.jpeg" alt="Holster">
+        <div class="pad">
+          <h3>Holster — Quick Draw</h3>
+          <p class="muted">Fast-access profile with retention tuned to your preference.</p>
+          <label>Leather Color</label>
+          <input type="text" placeholder="e.g., oxblood, mahogany" data-field="color">
+          <label style="margin-top:10px">Notes</label>
+          <input type="text" placeholder="pistol model, ride height" data-field="notes">
+          <div class="row" style="margin-top:10px">
+            <div style="flex:1">
+              <label>Quantity</label>
+              <input type="number" min="1" value="1" data-field="qty">
+            </div>
+            <div class="actions">
+              <button class="pill addBtn" type="button">Add to Order</button>
+            </div>
+          </div>
+        </div>
+      </article>
     </div>
   </main>
 
-  <!-- Toggle script -->
-  <script>
-  (function () {
-    const menu = document.getElementById('sideMenu');
-    const btn  = document.getElementById('menuButton');
-    const links = document.querySelectorAll('#sideMenu .navlink');
-    function toggle(force) {
-      const willOpen = (typeof force === 'boolean') ? force : !menu.classList.contains('open');
-      menu.classList.toggle('open', willOpen);
-      btn.setAttribute('aria-expanded', String(willOpen));
-    }
-    btn.addEventListener('click', () => toggle());
-    btn.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); toggle(); }
-    });
-    links?.forEach(a => a.addEventListener('click', () => toggle(false)));
-    document.addEventListener('click', (e) => {
-      if (!menu.contains(e.target) && !btn.contains(e.target)) toggle(false);
-    });
-  })();
-  </script>
+  <footer>
+    <div class="wrap">
+      <small>&copy; 3Leathers — No machines. Made by hand.</small>
+      <div class="actions" style="margin-top:10px">
+        <a class="pill" href="checkout.html">Proceed to Checkout</a>
+      </div>
+    </div>
+  </footer>
 
+  <script>
+    // basic cart using localStorage
+    const KEY = 'orderItems';
+    function getCart(){ try{ return JSON.parse(localStorage.getItem(KEY)) || []; }catch(e){ return []; } }
+    function saveCart(items){ localStorage.setItem(KEY, JSON.stringify(items)); }
+    function updateStatus(){
+      const items = getCart();
+      const total = items.reduce((n,i)=>n + Number(i.qty||0), 0);
+      const s = document.getElementById('orderStatus');
+      s.textContent = total ? `Items in order: ${total}` : 'Your order is empty.';
+    }
+
+    document.querySelectorAll('.addBtn').forEach(btn=>{
+      btn.addEventListener('click', ()=>{
+        const card = btn.closest('.card');
+        const item = card.dataset.item;
+        const color = card.querySelector('[data-field=color]').value.trim();
+        const notes = card.querySelector('[data-field=notes]').value.trim();
+        const qty   = Math.max(1, parseInt(card.querySelector('[data-field=qty]').value||'1',10));
+
+        const entry = { item, color, notes, qty };
+        const cart = getCart();
+        cart.push(entry);
+        saveCart(cart);
+        updateStatus();
+        btn.textContent = 'Added ✓';
+        setTimeout(()=>btn.textContent='Add to Order', 1200);
+      });
+    });
+
+    document.getElementById('clearOrder').addEventListener('click', ()=>{
+      localStorage.removeItem(KEY);
+      updateStatus();
+    });
+
+    updateStatus();
+  </script>
 </body>
 </html>
