--- a/custom.html
+++ b/custom.html
@@ -148,11 +148,134 @@
     </form>
   </main>
 
-  <footer>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>3Leathers — Handmade Leather by Walter Lewis III</title>
+  <meta name="description" content="No machines. Made by hand. Wallets, purses, holsters and custom leatherwork by 3Leathers." />
+  <style>
+    :root{
+      --bg:#0b0b0b; --ink:#f8f5e3; --accent:#d6b14a; --muted:rgba(255,255,255,.08);
+    }
+    html,body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
+    a{color:var(--accent);text-decoration:none}
+    header{position:sticky;top:0;z-index:10;background:rgba(0,0,0,.6);backdrop-filter:saturate(140%) blur(6px);border-bottom:1px solid var(--muted)}
+    .wrap{max-width:1100px;margin:auto;padding:16px}
+    .row{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .brand{display:flex;align-items:center;gap:10px}
+    .brand img{height:40px;border-radius:4px}
+    nav a{margin-left:10px}
+    .hero{
+      padding:48px 16px;border-bottom:1px solid var(--muted);
+      background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.7)), url("images/Backdrop2-min.jpeg") center/cover no-repeat;
+      text-align:center;
+    }
+    .hero h1{margin:0 0 8px 0;font-size:clamp(28px,5vw,44px)}
+    .hero p{margin:0 auto;max-width:820px;opacity:.9}
+    .cta{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-top:14px}
+    .pill{padding:10px 16px;border-radius:999px;background:var(--accent);color:#000;font-weight:700}
+    .pill.secondary{background:#2a2a2a;color:var(--ink);border:1px solid var(--muted)}
+    h2{margin:20px 0 10px}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
+    @media (max-width:900px){.grid{grid-template-columns:1fr 1fr}}
+    @media (max-width:640px){.grid{grid-template-columns:1fr}}
+    .card{background:rgba(0,0,0,.55);border:1px solid var(--muted);border-radius:14px;overflow:hidden}
+    .card img{width:100%;height:220px;object-fit:cover;background:#111;display:block}
+    .pad{padding:14px}
+    footer{margin-top:20px;border-top:1px solid var(--muted);background:rgba(0,0,0,.6)}
+    .donos{padding:20px 16px;border-top:1px solid var(--muted)}
+    .donos h3{text-align:center;margin:0 0 8px 0}
+    .donation-buttons{display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-top:8px}
+    .donate-btn{background-color:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700}
+    .donate-btn.ca{background-color:#3ddc84}
+    .fine{color:#cfc8a8;text-align:center;padding:14px 16px}
+  </style>
+</head>
+<body>
+  <header>
+    <div class="wrap row">
+      <div class="brand">
+        <img src="images/Logo-min.jpg" alt="3Leathers logo">
+        <strong>3Leathers</strong>
+      </div>
+      <nav>
+        <a href="index.html"><strong>Home</strong></a> •
+        <a href="shop.html">Shop</a> •
+        <a href="custom.html">Custom</a> •
+        <a href="checkout.html">Checkout</a>
+      </nav>
+    </div>
+  </header>
+
+  <section class="hero">
     <div class="wrap">
-      <small>&copy; 3Leathers — No machines. Made by hand.</small>
+      <h1>No machines. Made by hand.</h1>
+      <p>Hand-cut, hand-stitched leather goods from Bridgeport, WV — wallets, purses, and custom holsters. Every piece built to order by Walter Lewis III.</p>
+      <div class="cta">
+        <a class="pill" href="shop.html">Shop Now</a>
+        <a class="pill secondary" href="custom.html">Request Something Custom</a>
+      </div>
+    </div>
+  </section>
+
+  <main class="wrap">
+    <h2>Featured Work</h2>
+    <div class="grid">
+      <article class="card">
+        <img src="images/Purse04-min.jpg" alt="Handmade purse">
+        <div class="pad">
+          <strong>Purses</strong>
+          <p>Classic shapes, burnished edges, built to last.</p>
+          <a class="pill" href="shop.html">See More</a>
+        </div>
+      </article>
+      <article class="card">
+        <img src="images/Holster-BF-min.jpeg" alt="Custom belt-fit holster">
+        <div class="pad">
+          <strong>Holsters</strong>
+          <p>Custom-fit belt holsters, molded and finished by hand.</p>
+          <a class="pill" href="shop.html">See More</a>
+        </div>
+      </article>
+      <article class="card">
+        <img src="images/Quick-Draw-min.jpeg" alt="Quick-draw holster">
+        <div class="pad">
+          <strong>Quick-Draw</strong>
+          <p>Fast-access profiles with tuned retention.</p>
+          <a class="pill" href="shop.html">See More</a>
+        </div>
+      </article>
+    </div>
+  </main>
+
+  <!-- Donations (both PayPal and Cash App) -->
+  <footer>
+    <section class="donos">
+      <h3>Support 3Leathers — No machines. Made by hand.</h3>
+      <div class="donation-buttons">
+        <a href="https://www.paypal.me/WalterLewis675/5" target="_blank" class="donate-btn">$5</a>
+        <a href="https://www.paypal.me/WalterLewis675/10" target="_blank" class="donate-btn">$10</a>
+        <a href="https://www.paypal.me/WalterLewis675/20" target="_blank" class="donate-btn">$20</a>
+        <a href="https://www.paypal.me/WalterLewis675/50" target="_blank" class="donate-btn">$50</a>
+        <a href="https://www.paypal.me/WalterLewis675" target="_blank" class="donate-btn">Custom</a>
+      </div>
+      <div class="donation-buttons" style="margin-top:10px">
+        <a href="https://cash.app/$UncleButch3/5" target="_blank" class="donate-btn ca">$5</a>
+        <a href="https://cash.app/$UncleButch3/10" target="_blank" class="donate-btn ca">$10</a>
+        <a href="https://cash.app/$UncleButch3/20" target="_blank" class="donate-btn ca">$20</a>
+        <a href="https://cash.app/$UncleButch3/50" target="_blank" class="donate-btn ca">$50</a>
+        <a href="https://cash.app/$UncleButch3" target="_blank" class="donate-btn ca">Custom</a>
+      </div>
+    </section>
+    <div class="fine">
+      <small>&copy; 3Leathers — Handmade by Walter Lewis III</small>
     </div>
   </footer>
+</body>
+</html>
+
 
   <script>
     // Build conversation thread → hidden textarea
